RESOLVED FIXED90359
In vertical writing modes, child following float-clearing block has incorrect logical top
https://bugs.webkit.org/show_bug.cgi?id=90359
Summary In vertical writing modes, child following float-clearing block has incorrect...
mitz
Reported 2012-07-02 00:20:55 PDT
Created attachment 150368 [details] Test case <rdar://problem/11787030> In vertical writing modes, a block following a block which clears floats gets an incorrect logical top. See test case.
Attachments
Test case (1.08 KB, text/html)
2012-07-02 00:20 PDT, mitz
no flags
Use logicalTop() and logicalHeight() in RenderBlock::clearFloatsIfNeeded() (4.89 KB, patch)
2012-07-02 00:27 PDT, mitz
andersca: review+
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-01 (695.24 KB, application/zip)
2012-07-02 02:07 PDT, WebKit Review Bot
no flags
mitz
Comment 1 2012-07-02 00:27:13 PDT
Created attachment 150370 [details] Use logicalTop() and logicalHeight() in RenderBlock::clearFloatsIfNeeded()
WebKit Review Bot
Comment 2 2012-07-02 02:07:08 PDT
Comment on attachment 150370 [details] Use logicalTop() and logicalHeight() in RenderBlock::clearFloatsIfNeeded() Attachment 150370 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13124119 New failing tests: fast/multicol/vertical-rl/float-avoidance.html fast/multicol/vertical-lr/float-avoidance.html
WebKit Review Bot
Comment 3 2012-07-02 02:07:12 PDT
Created attachment 150381 [details] Archive of layout-test-results from gce-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
mitz
Comment 4 2012-07-02 12:11:59 PDT
Note You need to log in before you can comment on or make changes to this bug.