<rdar://problem/11787030> In vertical writing modes, child following float-clearing block has incorrect logical top https://bugs.webkit.org/show_bug.cgi?id=90359

Reviewed by Anders Carlsson.

Source/WebCore:

Test: fast/writing-mode/logical-height-after-clear.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::clearFloatsIfNeeded): Changed to use logicalTop() and logicalHeight()
instead of y() and height().

LayoutTests:

* fast/writing-mode/logical-height-after-clear-expected.html: Added.
* fast/writing-mode/logical-height-after-clear.html: Added.
* platform/mac/fast/multicol/vertical-lr/float-avoidance-expected.png:
* platform/mac/fast/multicol/vertical-lr/float-avoidance-expected.txt:
* platform/mac/fast/multicol/vertical-rl/float-avoidance-expected.png:
* platform/mac/fast/multicol/vertical-rl/float-avoidance-expected.txt:



Canonical link: https://commits.webkit.org/108257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121697 268f45cc-cd09-0410-ab3c-d52691b4dbfc